@@ -11,6 +11,7 @@ Changes for 1.3.3.2
 -Fixed an unwanted player bounce by a filter block after NPC stomp
 -Added the "compat.ini" support for episode and level specific to enable/disable certain bugs of the old game
 -Fixed the vanilla bug: player can get clipped into floor while standing on a block of a down-moving layer
+-Fixed the vanilla bug: NPC can get clipped into floor while standing on a block of a down-moving layer
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
